# Tensor-Operator-Inference-and-Geometry-Toolkit-with-Krylov-Spectral-Calculus-and-Convex-Certificates

./: CITATION.cff  README.md  pyproject.toml
(.github)/workflows/: ci.yml  lint.yml  microbench.yml  unit-tests.yml
docs/: conventions.md  glossary.md  index.md  quickstart.md
docs/methodology/: contracts_and_invariants.md  limitations.md  numerical_stability.md  (+1 more)
experiments/: hero_autodiff.yaml  hero_filter_functions_psd.yaml  hero_inverse_phase.yaml  hero_kernels_greens_convolution.yaml  hero_manifold_opt.yaml  hero_operator_solvers.yaml  hero_optimal_control_adjoint.yaml  hero_sdp_certificates.yaml  hero_spectral_expmv.yaml  hero_stiff_coupled_dynamics.yaml  hero_stochastic_filtering.yaml  hero_tensor_networks.yaml
notebooks/: 00_repo_tour.ipynb  01_tensor_calculus_autodiff.ipynb  02_inverse_phase_transition.ipynb  03_riemannian_low_rank.ipynb  04_matrix_free_krylov.ipynb  05_spectral_expmv_resolvent.ipynb  06_tensor_networks_mps_mpo.ipynb  07_stochastic_sde_filtering.ipynb  08_sdp_relaxations_certificates.ipynb  09_greens_kernels_convolution.ipynb  10_stiff_multiscale_time_stepping.ipynb  11_psd_filter_functions_floquet.ipynb  12_optimal_control_adjoint_gradients.ipynb
paper/: manuscript.tex  references.bib
results/: README.md
tests/: test_adjoint_gradient_checks.py  test_autodiff_jvp_vjp.py  test_boundary_constraint_consistency.py  test_contracts_adjoint.py  test_convolution_adjoint_pairing.py  test_fourier_parseval_and_filter_weights.py  test_identifiability_rank.py  test_krylov_convergence.py  test_manifold_retractions.py  test_mps_gauge_invariants.py  test_prox_operators.py  test_sde_convergence_sanity.py  test_sdp_primal_dual_gap.py  test_sensitivity_error_propagation.py  test_spectral_expmv.py  test_stiffness_stability_sanity.py  test_superoperators_vec_identities.py  test_tensor_identities.py
(+124 files in other folders)
