[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "tensor-inference-geometry"
version = "0.1.0"
description = "Math-first tensor/operator geometry toolkit for inverse problems, conditioning, and manifold optimization (TensorFlow-first)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Adrian Pencil" }]
keywords = [
  "tensors",
  "operator-theory",
  "inverse-problems",
  "riemannian-geometry",
  "krylov",
  "autodiff",
  "tensor-networks",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
  "tensorflow>=2.13",
  "numpy>=1.24",
  "scipy>=1.10",
  "sympy>=1.11",
  "typing-extensions>=4.7",
]

[project.optional-dependencies]
jax = ["jax>=0.4", "jaxlib>=0.4"]
torch = ["torch>=2.0"]
bayes = ["pymc>=5.0"]
quantum = ["qiskit>=1.0"]
graphs = ["networkx>=3.0"]
ml = ["scikit-learn>=1.3"]
mpi = ["mpi4py>=3.1"]
cython = ["cython>=3.0"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6.0",
  "mypy>=1.10",
  "pre-commit>=3.7",
]

[project.scripts]
tig = "tig.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tig"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
show_error_codes = true
